Bug #17593 Make sure any pending data is released from the server when freeing the result